<resources>
    <string name="app_name">My Favorite Dogs</string>
    <string name="name">Name</string>
    <string name="breed">Breed</string>
    <string name="age">Age</string>
    <string name="image_url">Image URL</string>
    <string name="likes">Likes</string>
    <string name="dislikes">Dislikes</string>
    <string name="notes">Notes</string>
    <string name="add_edit_key">add_edit</string>
    <string name="add_key">add</string>
    <string name="add_page_title">Add a dog</string>
    <string name="edit_page_title">Edit dog</string>
    <string name="save">Save</string>
    <string name="dog_key">dog</string>
    <string name="years_old">years old</string>
    <string name="required_field_label">Required field</string>
    <string name="unknown_breed">Unknown Breed</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_key">edit</string>
    <string name="dog_id_key">dog_id</string>
    <string name="delete_alert_title">Delete dog?</string>
    <string name="delete_alert_message">Do you really want to delete this dog?</string>
    <string name="delete_alert_positive_text">Yes</string>
    <string name="delete_alert_negative_text">No</string>
    <string name="likes_label">Likes:</string>
    <string name="dislikes_label">Dislikes:</string>
    <string name="notes_label">Notes:</string>

    <plurals name="download_error_dogs">
        <item quantity="one">Error downloading dog</item>
        <item quantity="other">Error downloading dogs</item>
    </plurals>
</resources>
