<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEditActivity"
    android:orientation="vertical"
    android:padding="@dimen/margin_large">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:startIconDrawable="@drawable/ic_dog_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_breed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/breed"
        android:layout_marginTop="@dimen/margin_small"
        app:startIconDrawable="@drawable/ic_dog">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:layout_weight="2">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_image_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/image_url"
            android:layout_weight="8">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="textWebEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_likes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/likes"
        android:layout_marginTop="@dimen/margin_small"
        app:startIconDrawable="@drawable/ic_dog_happy">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_dislikes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dislikes"
        android:layout_marginTop="@dimen/margin_small"
        app:startIconDrawable="@drawable/ic_dog_sad">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes"
        android:layout_marginTop="@dimen/margin_small"
        app:startIconDrawable="@drawable/ic_dog_notes">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>